--- a/public/index.html
+++ b/public/index.html
@@ -232,11 +232,11 @@
     <div class="section-content">
       <h2>CONTACT</h2>
       <div class="row">
-        <div class="col">
+         <div class="col">
           <form id="contactForm" action="https://formspree.io/f/xqkrrnge" method="POST">
             <input type="text" id="name" name="name" placeholder="Your Name" required />
             <input type="text" id="phone" name="phone" placeholder="Phone Number" required />
-            <input type="email" id="email" name="_replyto" placeholder="Email Address" required />
+            <input type="text" id="email" name="_replyto" placeholder="Email Address" required />
             <input type="text" id="subject" name="subject" placeholder="Subject" required />
             <textarea id="message" name="message" cols="30" rows="10" placeholder="Message" required></textarea>
             <button type="submit" id="sendButton">
