--- a/public/index.html
+++ b/public/index.html
@@ -255,7 +255,7 @@
               </li>
               <li>
                 <i class="fa-solid fa-mobile-screen"></i>
-                Call Us: 2384 - 4343443
+                Call Me: +33 66 70 33 170
               </li>
               <li>
                 <i class="fa-solid fa-envelope"></i>
