--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,7 @@
 
     <!-- START SECTION -->
     <section id="start" class="start">
+      <div id="particles-js"></div>
       <div class="banner-content">
         <div class="img-container">
           <img src="/img/me.jpg" alt="myphoto" />
@@ -64,7 +65,7 @@
       <div class="section-content">
         <h2>About Me</h2>
         <p>
-          <span>Hello, I'm Natalia Carbonel.</span> Once I was a lawyer, and in that profession, I found not only my calling but also enjoyed every moment of my work. However, one day I discovered the amazing world of information technology, and it became a turning point in my life. I learned the basic technologies for Front-End development. Software development has become my great passion and love. Now I aspire to find a job in a team where I can unlock my potential in new ways, continue learning, and growing. I am eager to delve into learning new technologies, creating applications that are not only beautiful but also user-friendly. I am ready to invest all my efforts and energy into projects that will bring positive changes to the world of web development.
+          <span class="text-animation"></span> Once I was a lawyer, and in that profession, I found not only my calling but also enjoyed every moment of my work. However, one day I discovered the amazing world of information technology, and it became a turning point in my life. I learned the basic technologies for Front-End development. Software development has become my great passion and love. Now I aspire to find a job in a team where I can unlock my potential in new ways, continue learning, and growing. I am eager to delve into learning new technologies, creating applications that are not only beautiful but also user-friendly. I am ready to invest all my efforts and energy into projects that will bring positive changes to the world of web development.
         </p>
 
         <div class="row">
@@ -212,12 +213,12 @@
 <div class="swiper">
   <div class="swiper-wrapper">
     <!-- Slides -->
-    <div class="swiper-slide"><img src="/assets/Capture d’écran (4).png" alt=""></div>
-    <div class="swiper-slide"><img src="/assets/Capture d’écran (5).png" alt=""></div>
-    <div class="swiper-slide"><img src="/assets/Capture d’écran (6).png" alt=""></div>
-    <div class="swiper-slide"><img src="/assets/Capture d’écran (7).png" alt=""></div>
-    <div class="swiper-slide"><img src="/assets/Capture d’écran (8).png" alt=""></div>
-    <div class="swiper-slide"><img src="/assets/Capture d’écran (9).png" alt=""></div>
+    <div class="swiper-slide"><img src="/assets/ecran4.png" alt="portfolio"></div>
+    <div class="swiper-slide"><img src="/assets/ecran5.png" alt="portfolio"></div>
+    <div class="swiper-slide"><img src="/assets/ecran6.png" alt="portfolio"></div>
+    <div class="swiper-slide"><img src="/assets/ecran7.png" alt="portfolio"></div>
+    <div class="swiper-slide"><img src="/assets/ecran8.png" alt="portfolio"></div>
+    <div class="swiper-slide"><img src="/assets/ecran9.png" alt="portfolio"></div>
 
       </div>
          
@@ -255,7 +256,8 @@
               </li>
               <li>
                 <i class="fa-solid fa-mobile-screen"></i>
-                Call Me: +33 66 70 33 170
+                Call Me: <br>
+                +33 66 70 33 170
               </li>
               <li>
                 <i class="fa-solid fa-envelope"></i>
@@ -281,7 +283,13 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> 
-   <script src="animation.js"></script>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/TextPlugin.min.js"></script>
+    <script type="module" src="animation.js"></script>
+   <script src="particles.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
