change text responsive

--- a/public/index.html
+++ b/public/index.html
@@ -87,7 +87,7 @@
               </li>
               <li>
                 <strong>Website</strong>
-                www.example.com
+                https://portfolio-carbonel.vercel.app/#
               </li>
               <li>
                 <strong>Address</strong>
@@ -148,7 +148,7 @@
       <div class="section-content">
         <h2>Technical Skills</h2>
         <div class="row">
-          <div class="col">
+          <div class="col-skill">
             <div class="skill">
               <span>Javascript</span>
               <div class="skill-bar" data-progress="80">
@@ -261,7 +261,7 @@
               </li>
               <li>
                 <i class="fa-solid fa-envelope"></i>
-                Email: carbonelnata@gmail.com
+                Email: <br> carbonelnata@gmail.com
               </li>
             </ul>
           </div>
