links for portfolio

--- a/public/index.html
+++ b/public/index.html
@@ -213,12 +213,12 @@
 <div class="swiper">
   <div class="swiper-wrapper">
     <!-- Slides -->
-    <div class="swiper-slide"><img src="/assets/ecran4.png" alt="portfolio"></div>
-    <div class="swiper-slide"><img src="/assets/ecran5.png" alt="portfolio"></div>
-    <div class="swiper-slide"><img src="/assets/ecran6.png" alt="portfolio"></div>
-    <div class="swiper-slide"><img src="/assets/ecran7.png" alt="portfolio"></div>
-    <div class="swiper-slide"><img src="/assets/ecran8.png" alt="portfolio"></div>
-    <div class="swiper-slide"><img src="/assets/ecran9.png" alt="portfolio"></div>
+    <div class="swiper-slide"><a href="https://cocktails-app-eo3m.vercel.app/" target="_blank"><img src="/assets/ecran4.png" alt="cocktail"></a></div>
+    <div class="swiper-slide"><a href="https://ricky-morty-eta.vercel.app/" target="_blank"><img src="/assets/ecran5.png" alt="ricky-morty-eta"></a></div>
+    <div class="swiper-slide"><a href="https://weather-livid-chi.vercel.app/" target="_blank"><img src="/assets/ecran6.png" alt="weather-livid-chi"></a> </div>
+    <div class="swiper-slide"><a href="https://to-do-list-henna-nine.vercel.app/" target="_blank"><img src="/assets/ecran7.png" alt="to-do-list-henna-nine"></a> </div>
+    <div class="swiper-slide"><a href="https://cryptochange-fawn.vercel.app/" target="_blank"><img src="/assets/ecran8.png" alt="cryptochange-fawn"></a> </div>
+    <div class="swiper-slide"><a href="https://treasure-vast-braid.glitch.me/" target="_blank"><img src="/assets/ecran9.png" alt="cp"></a> </div>
 
       </div>
          
