--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
       <div class="section-content">
         <h2>About Me</h2>
         <p>
-          <span class="text-animation"></span>  Now I aspire to find a job in a team where I can unlock my potential in new ways, continue learning, and growing. I am eager to delve into learning new technologies, creating applications that are not only beautiful but also user-friendly. I am ready to invest all my efforts and energy into projects that will bring positive changes to the world of web development.
+          <span class="text-animation"></span>  Development is my passion. I create responsive interfaces using HTML5, CSS3, SASS, Bootstrap, and JavaScript. I continue to learn new technologies every day. I use Vue.js and I'm currently studying React.js
         </p>
 
         <div class="row">
